# auth_user_with_fastapi

./: .cz.toml  .env-dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setenv.ps1  setup.cfg
migrations/: env.py
migrations/versions/: 5bed2746c45e_create_user_table.py
src/: main.py  routes.py
src/core/: database.py  metadata.py  settings.py
src/users/: domain.py  models.py  repository.py  routes.py  table.py
utils/: config.py  events.py  exc.py  guid.py  helpers.py  model.py  timezone.py
utils/providers/: config.py  database.py  external_id.py  password.py
