[project]
name = ""
version = "0.0.1"
description = ""
authors = [
    {name = "Gustavo Correa", email = "self.gustavocorrea@gmail.com"},
]
dependencies = [
    "fastapi~=0.74",
    "uvicorn~=0.17",
    "pydantic~=1.9",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest~=7.0",
    "pytest-cov~=3.0",
    "coverage~=6.3",
    "pytest-sugar~=0.9",
]
lint = [
    "blue~=0.8",
    "autoflake~=1.4",
    "isort~=5.10",
    "bandit~=1.7",
    "pylint~=2.12",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
